some changes to structure and version

--- a/_posts/thesis_chapters/2024-1-5-Gdps2.md
+++ b/_posts/thesis_chapters/2024-1-5-Gdps2.md
@@ -1001,44 +1001,29 @@ While the process of copying and pasting fixes into on-going projects is not tec
 During this process of careful documentation I became concerned that over facilitation in this instructional way would remove the possibility for errors and thus reduce the opportunities for learning from resolving failure. However, while each stage of the process of adding game pattern was documented in as complete a fashion as possible, in practice mistakes were still made and additional customisations were made. Thus while the process did reduce dependency on my input as a facilitator there were still opportunities for me to support and resolve coding errors in person.
 
 
+Code patching is a processes which is suggested by the UMC process, not explicitly perhaps, but it is a logical adaptations. This is an under explored area in research and the use of code patching raises some interesting questions.  
+
+- Question - do more useful / less de-motivating errors result from remixing and game patching?
+- Question - what impact does the process of being driven by GDPs have on how users deal with errors?
+- For example does the closely paired code structure and game output help with motivation?
+- How do you develop a more granular sense of the kinds of blocks, errors and how to overcome them.
+
+
 
 #### GDPs used to nurture tactical responses to coding errors
 
+NOTE - rewrite the below highlighting the possibility of highlighting different possible errors and responses helped by the high level of context present in GDP framing
+
+In analysis of journal notes and recorded screens I began to identify different kinds of problems that blocked participants from progressing. I refer to different kinds of blockages which result from tensions and contradictions between different elements in activity systems.
+
+Some blockages were non-technical including hunger or grumpyness between participants, others were due to lack of access to the right tools or understanding of processes, others were particular types of coding error. I propose that more granular understanding of different kinds of design blocks can help facilitators and ultimately learners in building agency in their response to them.
+
 In critique of online tutorials researchers note  few provide common errors[@kim_pedagogical_2017]. This lack of problem solving techniques communicated in online tutorials may addressed through use of GDPs.
-
-NOTE - rewrite the below highlighting the possibility of highlighting different possible errors and responses helped by the high level of context present in each
-
-How do you develop a more granular sense of the kinds of blocks, errors and how to overcome them.
 
 Professionals build up this sense through experience. While some practices are taught many others become ad-hoc rules of thumb that are difficult to communicate in abstract ways.
 
 More research would be welcome on how to help learners pick up these understandings.
 Further analysis of the different kinds of errors that are likely to arrive and testing different strategies for dealing with them that take into account the zone or proximal development of the participants may provide not only useful input for the participants, but also opportunities to check understandings of processes and game patterns and computational patterns in use.
-
-Code patching is a processes which is suggested by the UMC process, not explicitly perhaps, but it is a logical adaptations. This is an under explored area in research and the use of code patching raises some interesting questions.  
-
-Question - do more useful / less de-motivating errors result from remixing and game patching?
-
-Question - what impact does the process of being driven by GDPs have on how users deal with errors?
-
-For example does the closely paired code structure and game output help with motivation?
-
-
-
-<!-- ### On different kinds of snags / blockages
-
-PERHAPS MOVE BACK TO THE GDP CHAPTER IF SPACE?
-
-#### On Debugging and Embracing Different Types of Errors -
-
-In analysis of journal notes and recorded screens I began to identify different kinds of problems that blocked participants from progressing. I refer to different kinds of blockages which result from tensions and contradictions between different elements in activity systems.
-
-Some blockages were non-technical including hunger or grumpyness between participants, others were due to lack of access to the right tools or understanding of processes, others were particular types of coding error. I propose that more granular understanding of different kinds of design blocks can help facilitators and ultimately learners in building agency in their response to them.
- -->
-
-In analysis of journal notes and recorded screens I began to identify different kinds of problems that blocked participants from progressing. I refer to different kinds of blockages which result from tensions and contradictions between different elements in activity systems.
-
-Some blockages were non-technical including hunger or grumpyness between participants, others were due to lack of access to the right tools or understanding of processes, others were particular types of coding error. I propose that more granular understanding of different kinds of design blocks can help facilitators and ultimately learners in building agency in their response to them.
 
 For example,  on into the detail and types or errors.  These include:
 
@@ -1047,7 +1032,9 @@ For example,  on into the detail and types or errors.  These include:
   -   **Glitches** don't stop your game from running but as you play you see that there is an unintended effect. The game does something different from what we want it to do.
 
 
-Perhaps see the above glitch examples. Not fully understanding every line of code can create a fun, unpredictable environment. We can infer from these examples that wrong behaviour may be easier to investigate and to correct than no-behaviour errors. Aspects of the design encourage this kinds of error. Certainly the process of code patching does.
+NOTE - Perhaps explore glitch examples.
+
+Not fully understanding every line of code can create a fun, unpredictable environment. We can infer from these examples that wrong behaviour may be easier to investigate and to correct than no-behaviour errors. Aspects of the design encourage this kinds of error. Certainly the process of code patching does.
 
 In a similar way that the initial provisions of a broken games are valuable to engage initial participation, the becoming of a broken GDP state, has similar potential. EXPLAIN?
 
@@ -1055,16 +1042,12 @@ This area show potential but is under explored. However, just surfacing the issu
 
 
 <!-- #### Examples of Glitch types of errors
-
 Short examples of different types and the affect implications.
-
 Glitch errors can be productive.
-
 **Productive in exploring code / creating new game opportunites**
 An interesting one where the x / y axis mix up for Te 2019-03-18 leads to a new challenge in the game.
 
 **Productive in in**
-
 - Glitch - 2019-05-08 - Te and Da  - create moving enemy but it totally leaves the screen. This caused amusement and participants knew how they thought they would follow that up.
 
  The game making style of some participants -- for the most part young people -- seemed particularly likely to induce glitches and their unintended effects in game play. As a facilitator I began to celebrate these glitches with participants and explore with them the opportunities they provided to understand the related code in a way that was often concrete, engaging and and playful. -->
@@ -1084,71 +1067,6 @@ CAN i FIND ANY KEY EXAMPLES OF THIS?
 
 
 
-
- <!-- #### Examples of Glitch types of errors
-
- Short examples of different types and the affect implications.
-
- Glitch errors can be productive.
-
- **Productive in exploring code / creating new game opportunites**
- An interesting one where the x / y axis mix up for Toby 2019-03-18 leads to a new challenge in the game.
-
- **Productive in in**
-
- - Glitch - 2019-05-08 - Toby and Dave   - create moving enemy but it totally leaves the screen. This caused amusement and participants knew how they thought they would follow that up.
-
-  The game making style of some participants -- for the most part young people -- seemed particularly likely to induce glitches and their unintended effects in game play. As a facilitator I began to celebrate these glitches with participants and explore with them the opportunities they provided to understand the related code in a way that was often concrete, engaging and and playful. -->
-
-
-
-<!--
-
-NOTE REMOVED PERSONAL FOCUS SECTION
-
-## The use of GDPs explored from a personal focus
-
-In line with conventional schooling approaches, computing education in formal settings has large focus on the acquisition and testing of personal knowledge and skills. However, following Rogoff's interpretation of this personal plane as participatory appropriation [@rogoff_observing_1995-1], knowledge or processes which individuals adopt, reuse and transform fits within this plane. Thus beyond solo activity demonstrating personal knowledge, expressions of personal knowledge or practices when they are shared back into the community activity are also valid here.
-
-This chapters' examples of interaction of the participants shows the development of the effectiveness and confidence in participants personal communication surrounding articulation of characteristics games and vitally the processes involved in their creation. This section explore participants experience of GDPs from a personal focus and in particular an examination of and practices of debugging and product revision. -->
-
-<!--
- Elements that may resurface here.
-#### Expression of evolution of practices
-#### Expression of evolution of practices
--->
-
-<!-- #### Expression of evolution of practices
-Increase effectiveness and confidence in communication surrounding articulation of characteristics of their and others game
-**Example - 2019-03-18 - Suzanna & Olivia in the same session as Vignette A.**
-
-We can contrast Th's general lack of confidence in coding and other peer activities (where she remains on the periphery) with her strong ability to share back progress and decisions during the end of session playtesting.
-using language afforded by GDPs?
-
-HERE INCLUDE  excerpt -  1.05 - Looking for Olivia using GDP language - as well ask drawing on other home interests.
-FIND THIS EXCERPT  -->
-<!-- NOTE - FOLLOWING IS TOO TECHNICAL - REWORD/ REMOVE
-The pattern we see here is less relatable to every day game constructs in the way a game mechanic is. The pattern involved here is a coding pattern and a pattern in process. In code terms you need to add asset in preload, change name in create. In process terms you also need to export in correct format, note location of download, then using the editing tool locate and upload to correct area of the project file structure.
-
-**Discussion on Personal Focus**
-
-NOTE - Sumarise this and shift to another section.
-Probably Discussion
-
-The process of being able to map the demonstrations of development of understanding - of ? concrete practices -  can be important for practitioners. Especially true if the learning environment needs to be justified.
-In this intervention the justification is partly contextual, coding as a desirable employablabilty skill. In other contexts, the justification may be against more abstract curriculum concepts.
-
-My work on a learning dimensions framework for this intervention was driven by integration with curriculum based learning settings to devise a map - similar to drive of Bevan and colleagues to justify learning happening in science-focused tinkering exhibits in museums [-@bevan_learning_2015; -@petrich_it_2013]
--->
-<!-- NOTE - REMOVE THIS. INCORPORATE HERE?
-The personal plane is explored in a following chapter (working title Maps).
-This will cover findings relating to the value of participatory methods of mapping project progress and potential learning dimensions of activities.
--->
-<!-- Provide a link to next chapter - but before that a round up / discussion / to specific elements in relation to GDPs
-May need a way to differential this chapters discussion of GDP - and that of the next one.
- -->
-
-<!-- NOTE - perhaps end this section with some observations of personal expression of understanding as per Bevan et al during playtesting. Then link to next chapter / discussion. completes circle? -->
 
 
 ## Cultural Dimension
@@ -1338,8 +1256,6 @@ DEVELOP
 
 While Ed has only just been introduced to the ability to "cramp". He is happy and able to share this useful tool with Mi. Theme -->
 
-
-
 ### GDPs facilitate the use of wider funds of knowledge
 
 **GDPs allow participants to share and explore their home and professional funds of knowledge and practices in the emerging learning community.**
@@ -1355,7 +1271,7 @@ While not contributing anything new in this area to the research, these finding 
 In some of the examples above we saw Molly and Nadine showing identification with graphical making process and the process of bringing it the game.  
 Beyond there internal family interaction, they share this artistic flair or attention to detail which is likely to be a part of their home funds of knowledge into the emerging learning community.
 
-NOTE ALSO NARRATIVE OF
+NOTE ALSO NARRATIVE OF PEARL (next chapter?)
 
 In the above example, Bertie comments on Toby's game which has a dominant game experience of timed jumping, noting "Bertie: "It’s like parkour in Minecraft but timed. It’s like playing the game Wipeout. Have you ever played Wipeout?". Parkour in Minecraft and Wipe out are both game experiences whose main gameplay mechanic is about judging jumps to landing accurately. Bertie makes links to his existing experience of games making comparisons between Toby's game, commercial games and his own. In doing so Bertie is able to show his knowledge and analysis of gameplay patterns to this community. While his motivation is not clear, one interpretation is that Bertie could be making this contribution not only to openly share experience but also as a offering in return for his request for help which he has just made.
 
@@ -1392,12 +1308,7 @@ The majority of this chapter has focused on interpretation of observations of pa
 
 ### Discussion on GDPs, emerging processes and learner agency
 
-NOTE - JUST BULLET POINTS FOR NOW  - RELATED CLOSELY TO THE USE OF GDPS - AS THIS NEEDS TO BUILD ON THE WORK OF THE LAST CHAPTER
-
-<!-- This chapter has begun a process of exploration of the nature and evolution of agency in the practices of the participants through the varied use of GDPs.  -->
-
- <!-- In this final section I continue to explore emerging thoughts on learner agency in my design through the lens of existing research. The theme of conceptions of learner agency in this practice will be expanded upon in the following discussion chapter. -->
-
+This chapter has begun a process of exploration of the nature and evolution of agency in the practices of the participants through the varied use of GDPs. In this final section I continue to explore emerging thoughts on learner agency in my design through the lens of existing research.
 
 #### Tensions between facilitating agency and norming practices
 
@@ -1409,6 +1320,8 @@ However as a seeming counterpoint to this growing agency is the norming effects 
 
 
 #### Discussion on the use of design patterns and pattern catalogues
+
+DOES THIS NEED MOVING OR REFRAMING WITH A FOCUS ON AGENCY - IDEALLY THE LATER
 
 The process of creating a learning design where students were able to choose from a curated set of game design patterns is covered in the design chapter of this thesis. In this section the response of users is explored in relation to other research on this areas.
 
@@ -1470,7 +1383,13 @@ This conception of levels abstraction is also present in the analysis of the dif
 
 
 
-#### Potential implications for facilitators and researchers
+#### Potential implications for facilitators and researchers on use of GDP collection / intermediate construct
+NOTE - ideally change the headings here to be more specific
+
+
+<!-- As explored in the design chapter, later revisions of the design of supporting materials for each GDP included links to online descriptions of design, systems and computational concepts. Thus, beginning with experience and progressing to analysis in a sway that mirrors reflective professional practice. However analysis of my journal entries show  -->
+
+As previously explored I had a reluctance to shift learners away from the practical implementation of repeated game design patterns to focus on more abstract, de-contextualised conceptions of the knowledge. My concern hinged on the potential disorientation of imposed shifts of focus between different stages of creation the object of their activity shifts from the larger goal of making an engaging game to a narrower goal of implementing a game design pattern and the technical actions and operations needed to complete it.
 
 In professional coding environment and training programmes design patterns, particularly in object-oriented approaches and in the domains HCI are seen as a middle ground between abstract CT concepts and more concrete techniques.
 
@@ -1479,10 +1398,6 @@ In professional coding environment and training programmes design patterns, part
 Earlier in this chapter the work of Eriksson and colleagues using gameplay design patterns with young people [-@eriksson_using_2019] drew inspiration from the value of design patterns as a form of "intermediate-level concept" as advocated by fellow researchers as a way of sharing results of research [@barendregt_intermediate-level_2018]. Similarly, the implementation GDPs was the identification as a key unit of activity and analysis for this study, the justification being that it was at this level that richest use and development of tools and processes by the emerging community took place.
 
 The observations of this chapter show the advantages of GDP as an intermediate design concept, hovering in the space between too concrete to be repeated and too abstract to be grasped by novice game makers. GDPs create a tangible link between concrete player experience and the affordances of a guided creative process. Learners use of GDP as relatable and flexible constructs that facilitate  communication, sustaining engagement, planning and division of labour. The creation of designed objects using GDPS aid the personal appropriation and the propagation of technical and social processes game making practices.  Previously abstract concepts or processes become concrete through familiarisation via direct use and indirect observations through community participation. In many of the outlined uses of GDPs in chapter we can see processes at play that help bridge shifts in design perspective. Both the GDPs and the sub-actions of the wider activity design become short-cuts which stand in for previously tricky to complete set of actions. Rather than promising the transfer abstract concepts to other domains, we see learners build competency in participation in replicable processes. These processes which aid future iterations of the GDP implementation design cycle. The process of operationalisation of these sets of actions contributes to the creation of an informal, complex networked resource of operations which complement the more visible curated catalogue of GDPs.
-
-
-
-
 
 Game design patterns or their fragments are used as a form of design short cuts. Examples from the above include, _get an enemy in_ , _animate player_ or _get it in the game_ (when referring to transferring an graphical asset from authoring tool to the coding environment). The advantages of such shortcuts are, as discussed, to help with the prioritisation and ideation processes, to facilitate peer propagation of ideas, and potentially to inform debugging and improvements to increase game playability.
 
@@ -1493,12 +1408,6 @@ There are challenges of the use of these short cuts and at a more general the de
 
 Despite these challenges, research of data overwhelmingly indicates the positive affect of participants in implementation of GDPs. This is shown particularly in a growing sense of mastery towards technical processes becoming second nature and the resulting ability to share them with family and other peer groups. On a related note, the next section addresses the development and nature of agency in this learning design.
 
-PATCHED IN FROM PREVIOUS SECTION.
-
-As explored in the design chapter, later revisions of the design of supporting materials for each GDP included links to online descriptions of design, systems and computational concepts. Thus, beginning with experience and progressing to analysis in a sway that mirrors reflective professional practice. However analysis of my journal entries show an ongoing reluctance to shift learners away from the practical implementation of repeated game design patterns to focus on more abstract, de-contextualised conceptions of the knowledge.
-
-My concern hinged on the potential disorientation of the learner that imposed shifts of focus may provoke. As learners shift between different stages of creation the object of their activity shifts from the larger goal of making an engaging game to a narrower goal of implementing a game design pattern to narrower still of completing one of several actions to complete the implementation of a GDP. In the language of activity theory the change of objective denotes is a shift in scope of the activity system.
-
 
 
 
@@ -1507,7 +1416,6 @@ My concern hinged on the potential disorientation of the learner that imposed sh
 ### Summary of the pedagogical opportunities of Game Design Patterns
 
 While their results on the advantages and challenges of patterns use focus principally on the perspective of designers (as a way to frame analysis of the activity and shifting interpretations of pattern interpretations), the participant is also shared. I explore some of the opportunities and challenges they surface addressing learner perspective.
-
 
 The use of GDPs by participants has been outlined in this chapter. A summary is included in Table 6.x
 
