re doing - gdp as scope section

--- a/_posts/thesis_chapters/2024-1-5-Gdps2.md
+++ b/_posts/thesis_chapters/2024-1-5-Gdps2.md
@@ -142,9 +142,25 @@ https://docs.google.com/document/d/19PafC_w_7uObYL4v86IGeeFZTw2yKxjHfP_k85rHk_s/
 
 ### On GDP as a germ-cell and unit of analysis - and chapter outline
 
-In the introduction, I outlined some of the broader challenges of sharing practice and research to practically support the learning of coding practices beyond the immediate context of the research in question. The choice of what scope of activity to examine in detail is relevant to this challenge. While this concept of germ cell / unit of analysis a is more typically used in a larger scope of societal activity, the principles apply this smaller scope. For a study of this nature, too broad an analysis risks insufficient detail to allow replication, too narrow risks being overly context dependant and limiting the potential for wider application.
 
-This chapter centres on an interpretation of the implementation of game design patterns (GDPs) as a unit of analysis or germ-cell of activity. These are two similar concepts with slightly different foci.
+
+
+
+In the introduction, I outlined some of the broader challenges of sharing practice and research to practically support the learning of coding practices beyond the immediate context of the research in question. The choice of what scope of activity to examine in detail is relevant to this challenge. This chapter centres on an interpretation of the implementation of game design patterns (GDPs) as a unit of analysis or germ-cell of activity.  
+
+**Recap on design patterns**
+Before engaging in OBSERVATIONs, to deepening our understanding of use of design patterns in an education context
+
+  -  design patterns in learning design which exist at different scopes of activity [@mcandrew_patterns_2006].(CHECK THIS)
+  - how design patterns interplay with design principles and how the process relates to design based research  [@linn_science_2006].
+  - previous uses of GDPs - by repenning and others to then relate them to this framing.
+
+
+
+<!-- While this concept of germ cell / unit of analysis a is more typically used in a larger scope of societal activity, the principles apply this smaller scope.  -For a study of this nature, too broad an analysis risks insufficient detail to allow replication, too narrow risks being overly context dependant and limiting the potential for wider application. -->
+
+**On the utility of identifying a germ cell/ unit of analysis**
+These are two similar concepts with slightly different foci.
 
 <!-- Mid-level construct of design / patterns heuristics [] -->
 
@@ -152,41 +168,38 @@ This chapter centres on an interpretation of the implementation of game design p
 
 In this thesis, as a designer / researcher and practitioner both aspects are relevant.
 
-A granular exploration of the tensions and processes at work in a complex educational environment can via identifying emerging barriers and responses to comprehension, communication and practical barriers to implementing design challenges facilitates replicability of research and supports its potential value to other practitioners [@barab_using_2002].
+Examining the analytical aspect, the process of seeking and defining a key activity scope/unit for analysis helps define useful boundaries of what to analyse in depth. This chapter has a narrow focus on the implementation of gameplay design patterns (GDPs) allowing for the identification and analysis of patterns of participant behaviour and introduced and emerging community practices to do with GDPs. While this concept of germ cell / unit of analysis a is more typically used in a larger scope of societal activity, the principles apply this smaller scope. Indeed, while game making can be seen superficially as the primary activity, I argue that a narrower still objective of implementing GDPs and the dependant actions became the most vital unit of activity for participants, and consequently of primary interest for this study. This chapter will explore the implementation of GDPs as small scale projects contributing to the overarching objective to create a game.
+
+<!-- Here the term project here communicates a concrete implementation of a planned goal and also a sense that all elements of key activity are present at this level e.g. all stages of the design cycle (and another example?).  This sentiment is echoed by a parent when noticing that the documentation on one GDPs involved several distinct stages - "It’s like a project in itself really!" -->
+
+<!-- At this scope, for participants implementing . -->
+
+Turning to the developmental aspect, a granular exploration of the tensions and processes at work in a complex educational environment can via identifying emerging barriers and responses to comprehension, communication and practical barriers to implementing design challenges facilitates replicability of research and supports its potential value to other practitioners [@barab_using_2002].
+The last chapter explored the mutual evolution of the learning design, shaped by direct input, explicit requests and the implicit needs of the community and resulting feedback. The leading activity of iteratively of altering a game at the level of gameplay design pattern which emerged from this experimental process.  This chapter develops analysis of the role of GDPs as a guiding process for supporting resources and support processes in varied forms. These include a set of code examples, instruction tutorials, quick start activities which proposed micro level code modification. While these approaches are  distinct in their pedagogical use, they stemmed from the same germ-cell activity of altering the game through transforming GDPs.
+
+In interpreting the results of this chapter it is of value to explore experiences of participant agency in a way which reflects the mutual development of this design. Thus the intersection of the participant agency and use of GDPs both as introduced and adopted processes will be examined in this chapter.
 
 <!-- However, despite the value of a micro approach which includes close analysis of implementation of code structures. -->
 
-The process of seeking and defining a key activity scope/unit for analysis helps define useful boundaries of what to analyse in depth. This chapter has a narrow focus on the implementation of gameplay design patterns (GDPs) allowing for the identification and analysis of patterns of participant behaviour and introduced and emerging community practices to do with GDPs.
-<!-- At this scope, for participants implementing . -->
-
-While game making can be seen superficially as the primary activity, I argue that a narrower objective of implementing GDPs and the dependant actions became the most vital unit of activity for participants.
-
-Each GDP can be seen as a project of the overarching objective to create a game. Here the term project here communicates a concrete implementation of a planned goal and also a sense that all elements of key activity are present at this level e.g. all stages of the design cycle (and another example?).  This sentiment is echoed by a parent when noticing that the documentation on one GDPs involved several distinct stages - "It’s like a project in itself really!"
-
-This focus is supported in the following observations;
-
+<!-- The focus on GDP as unit of analysis is supported in the following observations;
 
 - the frequency of GDP language referring to patterns used by pairs in particular in the process of collaborating on their games
 - Through observation of GDPs as a germ-cell being used at different phases / scope of the learning design as it evolved.
-- a set of code examples, instruction tutorials, quick start activities which proposed micro level code modification. While these approaches are  distinct in their pedagogical use, they stemmed from the same germ-cell activity of altering the game through transforming GDPs
+-->
 
 <!-- The previous chapter explores how I developed these requests into a set of code examples, instruction tutorials, quick start activities which proposed micro level code modification. While these approaches are  distinct in their pedagogical use, they stemmed from the same germ-cell activity of altering the game through transforming GDPs. -->
 
 
-In addition the following merit attention in this chapter:
+<!-- In addition the following aspects of the use of GDPs merit attention in this chapter:
 
 NOTE CHECK THESE WITH THE DISCUSSION CONCLUSION.
 
 - the value of completing something concrete a sense of sustaining achievement.
 - the utility of the smaller unit of analysis in aiding resource creation / facilitation for facilitators
 - any other value for practitioners, parents and young participants - i.e. in navigation and goal setting.
-- the ability to reflect after implementing each sub project,
+- the ability to reflect after implementing each sub project, -->
 
-And to deeping our understanding, it is thus potentially helpful to undertake a deeper analysis of:
 
-  - game design patterns in learning design which exist at different scopes of activity [@mcandrew_patterns_2006].(CHECK THIS)
-  - how design patterns interplay with design principles and how the process relates to design based research  [@linn_science_2006].
-  - previous uses of GDPs - by repenning and others to then relate them to this framing.
 
 
 <!-- #### On GDPs as a concept to help analysis -->
@@ -201,9 +214,11 @@ tie in conceptts of
 - rising to the concrete - ie different forms of activity.  -->
 
 
-MOVED EARLIER HERE - Check it fits? In the literature review and methodology chapter we examined different interpretations of agency used by researchers using activity theory [@hopwood_agency_2022]. In interpreting the results of this chapter it is of value to explore Sannino's concept of transformative agency by double stimulation (TADS). This concept of agency is of particular value for this study as it acknowledges both the transformative role of the learner to the learning environment in a way which reflects the mutual development of this design. Thus the role of GDPS both as a tool introduced by myself as the facilitator, and their adopted use by participants will be examined here.
+<!-- MOVED EARLIER HERE - Check it fits? In the literature review and methodology chapter we examined different interpretations of agency used by researchers using activity theory [@hopwood_agency_2022].  -->
 
-The last chapter explored the mutual evolution of the learning design, shaped by direct input, explicit requests and the implicit needs of the community and resulting feedback. The leading activity of iteratively of altering a game at the level of gameplay design pattern which emerged from this experimental process.
+
+
+.
 
 <!-- DROP? We can ask where does knowledge of GDPs in participant come from. Good games communicate their affordances, (in the form of GDPs) to the player without the need for extensive additional documentation [@gee_learning_2005]. This process also communicates GDPs implicitly to players, a process borne out by brainstorming sessions early in the process which say participants listing GDPs or variants of them without explicit guidance in this direction. This  goal setting and implementation using GDP as a base developed into a principle activity of P1 with varied results. -->
 
@@ -422,6 +437,8 @@ This chapter allows us to develop this direction to focus in on the way design p
 
 Acknowledging that these observation do not fall nearly into each of the three planes, I begin with with some observation on GDPs impact on personal knowledge construction then those observations oriented chiefly to interpersonal activity and then ending those oriented more to cultural focus. The sections are also influenced by activity system elements, in particular the use of tools and the emerging community norms and concepts.
 Design stages (as explored in chapter two) are also used to guide categorisation , although the discussion of this chapter points to a more complex pattern of design that those outlined in many design cycles.
+
+
 
 
 <!-- ### Using cultural, interpersonal & Personal Planes Analysis of use of GDPs
